--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "http://quantified.avtobiografia.com/"
 languageCode = "en-us"
 title = "Quantified aquilax"
-theme = blank
+theme = "blank"
